# Gazebo_ros_vnc_sim_for_MARL_UAV

./: .dockerignore  .gitignore  =0.2.1  Dockerfile  README.md  README_WSL.md  SYSTEM_ARCHITECTURE.md  autolaunch.sh  debug_train_step.py  dev_shell.bat  docker-compose.yml  entrypoint.sh  install_linux.sh  install_windows.ps1  requirements.txt  run_linux.sh  run_windows.ps1  setup_and_run.bat  setup_real_slam.sh  supervisord.conf  test_map_output.laz
docs/: DEC_POMDP.md  (+12 more)
src/swarm_sim_pkg/: README.md  build_and_test.sh  default.rviz  package.xml  setup.py  verify_system.py
src/swarm_sim_pkg/launch/: mapping.launch.py  mapping_merged.launch.py  multi_ops.launch.py  simulation.launch.py  simulation_deprecated.launch.py  spawn_stations.launch.py  super_simulation.launch.py  swarm_octomap.launch.py  swarm_slam.launch.py  uav_sensors_deprecated.launch.py
src/swarm_sim_pkg/swarm_sim/: play_scenario.py  tf_broadcaster.py
src/swarm_sim_pkg/swarm_sim/assets/models/: ground_station.sdf  uav.sdf  uav.urdf.xacro  x500.urdf.xacro  x500_lidar.sdf  x500_lidar.sdf.xacro  (+1 more)
src/swarm_sim_pkg/swarm_sim/common/: battery.py  grid_viz_2d.py  occupancy_grid_2d.py  rewards.py  save_map.py  viz_utils.py  voxel_manager.py  voxel_manager.py.bak
src/swarm_sim_pkg/swarm_sim/evaluation/: evaluate_swarm.py
src/swarm_sim_pkg/swarm_sim/models/: gnn_communication.py
src/swarm_sim_pkg/swarm_sim/training/: debug_rl_env.py  evaluate_policy.py  test_2d_architecture.py  test_mappo.py  train_benchmarl.py  train_mappo.py  train_mappo_cbf.py  train_mappo_lagrangian.py  train_single.py  train_swarm.py
(+426 files in other folders)
