
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_sim</name>
  <version>0.0.1</version>
  <description>Simulated Swarm Environment for MARL</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>ros_gz_sim</depend>
  <depend>octomap_server</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/assets/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/assets/external_maps"/>
    <gazebo_ros gazebo_model_path="${prefix}/assets/external_maps/competition_2021add"/>
    <gazebo_ros gazebo_model_path="${prefix}/assets/external_maps/kepco"/>
    <gazebo_ros gazebo_model_path="${prefix}/assets/external_maps/pending"/>
    <gazebo_ros gazebo_model_path="${prefix}/assets/external_maps/exploration_complex"/>
  </export>
</package>
